version/0.25/_sources/api/solver/_autosummary/settings/piecewise_linear.rst.txt
:orphan:

.. _piecewise_linear:

piecewise_linear
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.piecewise_linear.piecewise_linear
    :show-inheritance:

.. rubric:: Attributes

================================   ============================================================

Attribute                                                                               Summary

================================   ============================================================
:ref:`function_of <function_of>`            Specify what variable this object is a function of.

:ref:`data_points <data_points>`       Specify ranges and values for piecewise-linear property.

================================   ============================================================

.. rubric:: Included in:

============================================================   =============================================

Parent                                                                                               Summary

============================================================   =============================================
:ref:`direct_solar_irradiation <direct_solar_irradiation>`          Parameters for direct solar irradiation.

:ref:`diffuse_solar_irradiation <diffuse_solar_irradiation>`       Parameters for diffuse solar irradiation.

============================================================   =============================================

