version/0.28/_sources/api/solver/_autosummary/settings/piecewise_linear.rst.txt
:orphan:

.. _piecewise_linear:

piecewise_linear
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.piecewise_linear
    :show-inheritance:

.. rubric:: Attributes

================================   ============================================================

Attribute                                                                               Summary

================================   ============================================================
:ref:`function_of <function_of>`            Specify what variable this object is a function of.

:ref:`data_points <data_points>`       Specify ranges and values for piecewise-linear property.

================================   ============================================================

.. rubric:: Included in:

============================================================   ===================================================================

Parent                                                                                                                     Summary

============================================================   ===================================================================
:ref:`direct_solar_irradiation <direct_solar_irradiation>`                                Parameters for direct solar irradiation.

:ref:`diffuse_solar_irradiation <diffuse_solar_irradiation>`                             Parameters for diffuse solar irradiation.

:ref:`anode_ds <anode_ds>`                                           Lithium mass diffusivity in anode particles in the P2D model.

:ref:`anode_sigma <anode_sigma>`                                        Set solid electric conductivity in anode in the P2D model.

:ref:`anode_ocv_1 <anode_ocv_1>`                                                   Set ocp in negative electrode in the P2D model.

:ref:`cathode_ds <cathode_ds>`                                     Lithium mass diffusivity in cathode particles in the P2D model.

:ref:`cathode_sigma <cathode_sigma>`                                  Set solid electric conductivity in cathode in the P2D model.

:ref:`cathode_ocv_1 <cathode_ocv_1>`                                               Set ocp in positive electrode in the P2D model.

:ref:`electrolyte_de <electrolyte_de>`                                           Mass diffusivity of electrolyte in the P2D model.

:ref:`electrolyte_t_plus <electrolyte_t_plus>`                                        Set transference number t+ in the P2D model.

:ref:`electrolyte_sigma <electrolyte_sigma>`                               Set ionic conductivity in electrolyte in the P2D model.

:ref:`electrolyte_activity <electrolyte_activity>`                                 Set electrolyte activity-term in the P2D model.

============================================================   ===================================================================

